--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <div class="languages__header">Languages</div>
             <div class="languages__item">
               <p contenteditable="true" id="english">English</p>
-              <input type="range" />
+              <input type="range" id="english_inp"/>
             </div>
             <div class="languages__item">
               <p contenteditable="true" id="malayalam">Malayalam</p>
-              <input type="range" />
+              <input type="range" id="malayalam_inp"/>
             </div>
             <div class="languages__item" id="hindi">
               <p contenteditable="true">Hindi</p>
-              <input type="range" />
+              <input type="range" id="hindi_inp"/>
             </div>
           </div>
         </div>
@@ -66,15 +66,15 @@
             <div class="languages__header">Languages</div>
             <div class="languages__item">
               <p contenteditable="true" id="english_1">English</p>
-              <input type="range" />
+              <input type="range" id="english_inp_1"/>
             </div>
             <div class="languages__item">
               <p contenteditable="true" id="malayalam_1">Malayalam</p>
-              <input type="range" />
+              <input type="range" id="malayalam_inp_1"/>
             </div>
             <div class="languages__item" id="hindi_1">
               <p contenteditable="true">Hindi</p>
-              <input type="range" />
+              <input type="range" id="hindi_inp_1"/>
             </div>
           </div>
         </div>
